Try to fix some dynamic layout issues

--- a/src/components/cart-app.scss
+++ b/src/components/cart-app.scss
@@ -8,5 +8,5 @@
   align-items: center;
   justify-content: center;
   color: #242424;
-  background-color: #dfdfdf;
+  background-color: #016082;
 }
